done without extra

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <input type="number" name="nInput" id="nInput">
     </form>
     <button class="btn btn-danger" id="gomb">Button</button>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
